# Nexus

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PARITY_TRACKER.md  README.md  audit-report.md  prd.json
.omc/plans/: nexus-architecture-v3.md  nexus-roadmap-v1.md  nexus-roadmap-v2.md
apps/: AGENTS.md
apps/cli/: AGENTS.md  Cargo.toml
apps/cli/src/: main.rs
libs/: AGENTS.md
libs/nexus/: AGENTS.md  Cargo.toml
libs/nexus/src/: actor.rs  book.rs  cache.rs  calibrate.rs  catalog.rs  database.rs  engine.rs  lib.rs  messages.rs  portfolio.rs  signals.rs  slippage.rs  strategy_ctx.rs
libs/nexus/src/buffer/: bar_aggregation.rs  buffer_set.rs  mod.rs  ring_buffer.rs  tick_buffer.rs
libs/nexus/src/data/: engine.rs  messages.rs  mod.rs
libs/nexus/src/engine/: account.rs  core.rs  margin.rs  mod.rs  oms.rs  orders.rs  reports.rs  risk.rs  sizing.rs
libs/nexus/src/ingestion/: adapters.rs  mod.rs
libs/nexus/src/ingestion/adapters/: binance.rs
libs/nexus/src/instrument/: enums.rs  expressions.rs  instrument_id.rs  mod.rs  registry.rs  synthetic.rs  tick_scheme.rs  types.rs
libs/nexus/src/live/: binance_market_adapter.rs  bybit_http_adapter.rs  bybit_market_adapter.rs  bybit_ws_adapter.rs  exchange.rs  execution_client.rs  http_adapter.rs  matching_core.rs  mod.rs  normalizer.rs  okx_http_adapter.rs  okx_market_adapter.rs  okx_ws_adapter.rs  ws_adapter.rs
libs/nexus/src/mc_wf/: mod.rs
libs/nexus/src/optim/: mod.rs
libs/nexus/src/paper/: broker.rs  mod.rs
libs/nexus/src/sweep/: mod.rs
libs/nexus/tests/: backtest_benchmark.rs  bar_aggregation_test.rs  catalog_test.rs  engine_test.rs  ingestion_test.rs  multi_instrument_test.rs  order_emulator_test.rs  order_matching_test.rs  paper_trading_test.rs  ring_buffer_test.rs  strategy_ctx_test.rs  synthetic_instrument_test.rs  tick_buffer_test.rs
libs/strategy/: AGENTS.md  Cargo.toml
libs/strategy/src/: actor_wrapper.rs  context.rs  examples.rs  indicators.rs  lib.rs  live_strategy.rs  signals.rs  strategy_trait.rs  types.rs
libs/tvc/: AGENTS.md  Cargo.toml
libs/tvc/examples/: debug_ticks.rs
libs/tvc/src/: compression.rs  lib.rs  reader.rs  types.rs  writer.rs
libs/tvc/tests/: roundtrip_test.rs
