[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
tvc.path = "../../libs/tvc"
nexus.path = "../../libs/nexus"
nexus-strategy.path = "../../libs/strategy"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
