[package]
name = "nexus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tvc.path = "../tvc"
memmap2 = "0.9"
rayon = "1.10"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
