[package]
name = "nexus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tvc.path = "../tvc"
memmap2 = "0.9"
rayon = "1.10"
rand = { version = "0.8", features = ["small_rng"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
cmaes = "0.2"
nalgebra = "0.33"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
hmac = "0.12"
hex = "0.4"
secrecy = "0.4"
serde_urlencoded = "0.1"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
